hubSide/force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <description>Object use to save control for the fields and approvals</description>
    <label>Alert</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>