hubSide/force-app/main/default/objects/Alert__c/fields/Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_Inactive__c</fullName>
    <label>Actif/Passif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Passif</fullName>
            </value>
            <value>
                <fullName>SansObjet</fullName>
                <label>Sans objet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>