hubSide/force-app/main/default/objects/Alert__c/fields/BusinessRulesNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessRulesNumber__c</fullName>
    <label>Business rules number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesDiscountMotif__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RGSIN10</fullName>
            </value>
            <value>
                <fullName>RGSIN11</fullName>
            </value>
            <value>
                <fullName>RGSIN12</fullName>
            </value>
            <value>
                <fullName>RGSIN13</fullName>
            </value>
            <value>
                <fullName>RGSIN15</fullName>
            </value>
            <value>
                <fullName>RGSIN14</fullName>
            </value>
            <value>
                <fullName>RGSIN16</fullName>
            </value>
            <value>
                <fullName>RGSIN17</fullName>
            </value>
            <value>
                <fullName>RGSIN18</fullName>
            </value>
            <value>
                <fullName>RGSIN19</fullName>
            </value>
            <value>
                <fullName>RGSIN20</fullName>
            </value>
            <value>
                <fullName>RGSIN21</fullName>
            </value>
            <value>
                <fullName>RGSIN22</fullName>
            </value>
            <value>
                <fullName>RGSIN23</fullName>
            </value>
            <value>
                <fullName>RGSIN24</fullName>
            </value>
            <value>
                <fullName>RGSIN00</fullName>
                <isActive>false</isActive>
                <label>RGSIN00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>