hubSide/force-app/main/default/objects/Alert__c/fields/couldDeleted__c.field-meta.xml
<CustomField>
    <fullName>couldDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>couldDeleted</label>
    <type>Checkbox</type>
</CustomField>