hubSide/force-app/main/default/objects/Alert__c/fields/RuleCode__c.field-meta.xml
<CustomField>
    <fullName>RuleCode__c</fullName>
    <label>Rule code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>