hubSide/force-app/main/default/objects/Alert__c/fields/SalesDiscountMotif__c.field-meta.xml
<CustomField>
    <fullName>SalesDiscountMotif__c</fullName>
    <label>Motif de geste commercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motif_Geste_commercial</valueSetName>
    </valueSet>
</CustomField>