hubSide/force-app/main/default/objects/Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Approval status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>En Attente</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Dérogation acceptée</label>
            </value>
            <value>
                <fullName>Refused</fullName>
                <label>Dérogation refusée</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Clos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>