hubSide/force-app/main/default/objects/Alert__c/fields/Type_Alert__c.field-meta.xml
<CustomField>
    <fullName>Type_Alert__c</fullName>
    <label>Type Alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloquant</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>