hubSide/force-app/main/default/objects/Alert__c/fields/Validation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Validation_Reason__c</fullName>
    <description>Picklist to hold the validation reason of the alert.</description>
    <label>Motif de validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepté processus métier</fullName>
            </value>
            <value>
                <fullName>Accepté Geste commercial</fullName>
            </value>
            <value>
                <fullName>Validation par défaut car warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>