hubSide/force-app/main/default/objects/Alert__c/fields/ValidatorUserId__c.field-meta.xml
<CustomField>
    <fullName>ValidatorUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the the user who approved the alert.</description>
    <label>Valideur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>