hubSide/force-app/main/default/objects/Alert__c/validationRules/Cannot_edit_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_status</fullName>
    <active>true</active>
    <description>Only manager GS can edit alert status</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
TEXT($User.BusinessProfile__c) &lt;&gt; &quot;ManagerGS&quot;,
TEXT($User.BusinessProfile__c) &lt;&gt; &quot;AdministrateurGlobal&quot;,
$Profile.Name  &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Administrateur système&quot;
)</errorConditionFormula>
    <errorMessage>Vous n&apos;avez pas le droit de modifier le statut d&apos;une alerte.</errorMessage>
</ValidationRule>